      any router is the canonical Unnamed.
    - New controller event to alert the controller when our server descriptor
      has changed.
    - Only include function names in log messages for debugging messages;
      in other cases, the content of the message should be clear on its own,
      and including the function name only seems to confuse users.

  o Security Fixes, minor:
    - If a client asked for a server by name, and we didn't have a
      descriptor for a named server with that name, we might return an
      old one.
    - Fix NetBSD bug that could allow someone to force uninitialized RAM
      to be sent to a server's DNS resolver. This only affects NetBSD
      and other platforms that do not bounds-check tolower().

  o Major bugfixes:
    - Avoiding crashing on race condition in dns.c:
      tor_assert(! resolve->expire)
    - When a client asks the server to resolve (not connect to)
      an address, and it has a cached answer, give them the cached answer.
      Previously, the server would give them no answer at all.

  o Minor Bugfixes:
    - Two small performance improvements on parsing descriptors.
    - Major performance improvement on inserting descriptors: change
      algorithm from O(n^2) to O(n).
    - Make the common memory allocation path faster on machines where
      malloc(0) returns a pointer.
    - Fix a debug log message in eventdns to say "X resolved to Y"
      instead of "X resolved to X".
    - Prevent the contrib/exitlist script from printing the same
      result more than once.
    - Resume building on non-gcc compilers and ancient gcc. Resume
      building with the -O0 compile flag. Resume building cleanly on
      Debian woody.
    - Correct includes for net/if.h and net/pfvar.h on OpenBSD (from Tup).
    - Improve Tor's chances of building and running on Cygwin again.
    - If we're a directory mirror and we ask for "all" network status
      documents, we would discard status documents from authorities