@@ -45,7 +45,8 @@ N - Bug 303: block exit from circuits created with create-fast
     - Specify and document
     - Implement
     - Note that we'd like a better speed-bump too.
-N - Bug 336: figure out the right thing to do when telling nicknames to
+  o Bug 336: CIRC events should have digests when appropriate.
+N - figure out the right thing to do when telling nicknames to
     controllers.  We should always give digest, and possibly sometimes give
     nickname? Or digest, and nickname, with indication of whether name is
     canonical?
