@@ -45,6 +45,8 @@ Changes in version 0.1.2.2-alpha - 2006-??-??
     - Only include function names in log messages for debugging messages;
       in other cases, the content of the message should be clear on its own,
       and including the function name only seems to confuse users.
+    - Fix CIRC controller events so that controllers can learn the identity
+      digests of non-Named servers used in circuit paths. (Fixes bug 336.)
 
   o Security Fixes, minor:
     - If a client asked for a server by name, and we didn't have a
